--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -14,9 +14,11 @@
     "bcrypt": "^6.0.0",
     "cosine-similarity": "^1.0.1",
     "formidable": "^3.5.4",
+    "mammoth": "^1.10.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "openai": "^5.20.1",
+    "pdf-parse": "^1.1.1",
     "prisma": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
