--- a/class-notes-mvp/tsconfig.json
+++ b/class-notes-mvp/tsconfig.json
@@ -20,7 +20,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*", "./src/*"],
+      "@/*": ["src/*"],
       "@/components/*": ["components/*", "src/components/*"],
       "@/lib/*": ["lib/*", "src/lib/*"]
     },
