functioning summary page

--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -22,7 +22,9 @@
     "pdf-parse": "^1.1.1",
     "prisma": "^6.16.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
