--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -14,6 +14,9 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cosine-similarity": "^1.0.1",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
     "mammoth": "^1.10.0",
     "next": "15.5.3",
@@ -24,7 +27,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
-    "rehype-raw": "^7.0.0"
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
