--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -24,6 +24,7 @@
     "openai": "^5.20.1",
     "pdf-parse": "^1.1.1",
     "prisma": "^6.16.0",
+    "python": "^0.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
