--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@aws-sdk/client-s3": "^3.892.0",
+    "@aws-sdk/lib-storage": "^3.892.0",
     "@prisma/client": "^6.16.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
