--- a/amplify.yml
+++ b/amplify.yml
@@ -14,6 +14,10 @@ applications:
             - npx prisma generate
             - npx prisma migrate deploy
             - pnpm build || npm run build
+      artifacts:
+        baseDirectory: .next
+        files:
+          - "**/*"
       cache:
         paths:
           - node_modules/**/*
