--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ applications:
       phases:
         preBuild:
           commands:
+            - export NPM_CONFIG_PRODUCTION=false   # <-- allow devDependencies
             - npm ci
         build:
           commands:
