--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate --schema=prisma/schema.prisma"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.892.0",
     "@aws-sdk/lib-storage": "^3.892.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.16.0",
+    "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cosine-similarity": "^1.0.1",
@@ -25,7 +26,6 @@
     "next-auth": "^4.24.11",
     "openai": "^5.20.1",
     "pdf-parse": "^1.1.1",
-    "prisma": "^6.16.0",
     "python": "^0.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -45,6 +45,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "postcss": "^8.5.6",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
