--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -22,6 +22,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.4",
     "mammoth": "^1.10.0",
+    "music-metadata": "^11.9.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "openai": "^5.20.1",
