--- a/class-notes-mvp/package.json
+++ b/class-notes-mvp/package.json
@@ -17,6 +17,8 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cosine-similarity": "^1.0.1",
+    "cytoscape-fcose": "^2.2.0",
+    "d3-force": "^3.0.0",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
@@ -30,9 +32,12 @@
     "python": "^0.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-force-graph": "^1.48.1",
+    "react-force-graph-2d": "^1.29.0",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "starback": "^2.1.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
